web/src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "./box.css";
@import "./nav.css";
@import "./grid.css";
@import "./rte.css";
/* @import "/node_modules/react-grid-layout/css/styles.css"; */
/* @import "/node_modules/react-resizable/css/styles.css"; */

html {
  font-family: "GP", Arial, Helvetica, sans-serif;
}

body {
  -webkit-font-smoothing: antialiased;
  margin: 0;
  font-feature-settings: "kern" 1, "dlig" 1;
  -webkit-font-feature-settings: "kern" 1, "dlig" 1;
  -moz-font-feature-settings: "kern" 1, "dlig" 1;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar,
.overflow-x-scroll::-webkit-scrollbar,
div::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body,
.overflow-x-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

html,
body,
body > div:first-child,
body > div > div {
  height: 100%;
  color: #000000;
}

table,
td,
th {
  border-collapse: collapse;
  padding: 0;
  margin: 0;
}

small {
  font-size: 100% !important;
}
/* MARQUEE */
.marquee {
  position: relative;
  width: 100vw;
  max-width: 100%;
  height: 2rem;
  overflow-x: hidden;
  border-bottom:1px solid black;
  text-align:center;
  background:#ffffff;
}

.marquee-track {

  white-space: nowrap;
  will-change: transform;
  text-align:center;
  line-height: 1.2;
}
.marquee-content{
  line-height:2;
}
.marquee a{
  position:relative;
  top:-2px;
  color:white;
  background:black;
  display:inline-block;
  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
  border-radius:10px;
  margin-left:5px;
  line-height: 1;
  padding: 1px 6px 4px;
}
@keyframes marquee {
  from { transform: translateX(0); }
  to { transform: translateX(-50%); }
}

/*end marquee*/
.map-button{
  top:-18px;
  left:5px;
  cursor:pointer;
}
.rte .md\:text-desktopCaption *{
  font-size:inherit;
  line-height:inherit;
}

.animate-in {
  animation-fill-mode: forwards;
  animation-delay: 1s;
}

/*
.gallery-image .gatsby-image-wrapper {
  @apply relative !important;
}
.gallery-image [aria-hidden="true"] {
  @apply hidden !important;
}

.gallery-image img {
  @apply relative !important;
  @apply h-auto !important;
}
*/
/* R & D*/
.lightbox-pdf{
  position: fixed;
  top:0;
  left:0;
  z-index: 900;
  background: white;
  width: 100vw;
  height:100vh;
  overflow-y: scroll;
  
}
.lightbox-pdf canvas{
  display: block;
  margin:0 auto;
  margin-top:50px;
}
.lightbox-pdf .left-arrow{
  position: absolute;
  left:30px;
  top:50%;
}
.lightbox-pdf .pdf-close{
  top:70px;
  right:150px;
}
.lightbox-pdf .right-arrow{
  position: absolute;
  right:30px;
  top:50%;
}
.rte.rte-large .article-accordion{
  border:none;
  font-size:20px;
  line-height: 30px;
}
.rte.rte-large .article-accordion h2{
  font-size:30px;
}
.rte.rte-large .article-accordion *{
  font-size:inherit;
  line-height: inherit;
}
.rte .article-accordion .flag{
  font-size:12px;
  line-height: 1;
  padding:2px;
  margin:0 15px;
}
.rte .html-text{
  font-size:18px;
  line-height: 1;
}
/* info section R & D */
img{
  max-width: 500px;
}
.info-section{
  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
  animation:slide;
  animation-iteration-count: 1;
  animation-duration:0.2s;
}
@keyframes slide {
  from { transform: translateY(-500px); }
  to { transform: translateY(0); }
}
/* end R & D*/
@media only screen and (max-width: 768px) {
  .gallery-image {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
  }
}

@keyframes scaleDown {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.animate-scale-down {
  animation: 1s scaleDown 1s forwards;
}

.animate-scale-down svg {
  margin-left: 1px;
}

.earth {
  font-family: "Earth", "GP", Arial, Helvetica, sans-serif;
}

.no-shadow {
  box-shadow: none !important; /* weird bug with popover modules */
}

.gradient-to-b {
  /* background: rgb(255, 255, 255); */
  background: linear-gradient(
    0deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.95) 45%,
    rgba(255, 255, 255, 0.98) 75%,
    rgba(255, 255, 255, 1) 100%
  );
}

/*
@screen md {
  .box.accordion:not(.accordion-home) {
    box-shadow: none !important;
    @apply pointer-events-none !important;
    margin: 0 !important;
    
  }
  .box.accordion:not(.accordion-home) button {
    margin: 0 !important;
    padding: 0 !important;
  }
  .box.accordion:not(.accordion-home) div {
    height: auto !important;
    opacity: 1 !important;
    display: block !important;
    margin: 0 !important;
    padding-left: 0 !important;
  }
  .box.accordion:not(.accordion-home) .accordion-icon {
    display: none !important;
  }
}
*/

